[package]
name = "dnsupdate"
version = "0.1.0"
authors = ["Timo Ley <timo@leyt.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
toml = "0.5.8"
structopt = "0.3.22"
